# python-project-template

./: .gitignore  README.md  SYNC_TOOL_README.md  cookiecutter.json  pyproject.toml  sync_analyzer.py  template_sync_cli.py
.claude/commands/: sync-project-template.md
hooks/: post_gen_project.py
sync_project_template/: sync.py
tests/: conftest.py  test_cookiecutter.py  test_sync.py
{{cookiecutter.repository}}/: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  justfile  pyproject.toml
{{cookiecutter.repository}}/docker/: Dockerfile.python
{{cookiecutter.repository}}/src/example_app/: main.py
{{cookiecutter.repository}}/src/metaflow_app/: spin_prototype.py
{{cookiecutter.repository}}/src/torchvision_app/: torchvision_example.py
{{cookiecutter.repository}}/tasks/: check.just  docker.just  package.just
