# https://docs.astral.sh/uv/reference/settings/
# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

# PROJECT

[project]
name = "{{cookiecutter.repository}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.description}}"
authors = [{ name = "{{cookiecutter.user}}" }]
readme = "README.md"
license = "{{cookiecutter.license}}"
requires-python = ">={{cookiecutter.python_version}}"
dependencies = [
    "hatchling>=1.27.0",
]

# LINKS

[project.urls]
Homepage = "https://github.com/{{cookiecutter.user}}/{{cookiecutter.repository}}"
Documentation = "https://{{cookiecutter.user}}.github.io/{{cookiecutter.repository}}/"
Repository = "https://github.com/{{cookiecutter.user}}/{{cookiecutter.repository}}"
"Bug Tracker" = "https://github.com/{{cookiecutter.user}}/{{cookiecutter.repository}}/issues"

# SCRIPTS

[project.scripts]
{{cookiecutter.repository}} = "{{cookiecutter.package}}.scripts:main"

# DEPENDENCIES

[dependency-groups]
check = [
    "bandit>=1.8.3",
    "coverage>=7.6.12",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest-xdist>=3.6.1",
    "ruff>=0.9.9",
]
commit = ["commitizen>=4.4.1", "pre-commit>=4.1.0"]
dev =[
    "loguru>=0.7.3",
    "rust-just>=1.39.0",
    "locust>=2.31.8,<3.0.0",
    "pyinstrument>=4.7.3,<5.0.0",
]
doc = ["pdoc>=15.0.1"]
{% if cookiecutter.include_metaflow %}
metaflow = [
    "metaflow>=2.19.7",
]
{% endif %}
{% if cookiecutter.include_fastapi %}
fastapi = [
    "fastapi>=0.123.10",
    "uvicorn>=0.38.0",
]
{% endif %}

# TOOLS

[tool.uv]
default-groups = ["check", "commit", "dev", "doc"]
{% if cookiecutter.include_torchvision %}
# torch
# enable selecting torch wheel based on environment with uv sync --extra {cpu, cu128}
# https://docs.astral.sh/uv/guides/integration/pytorch/#configuring-accelerators-with-optional-dependencies
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu128" },
  ],
]

[project.optional-dependencies]
cpu = [
  "torch>=2.7.0",
  "torchvision>=0.22.0",
]
cu128 = [
  "torch>=2.7.0",
  "torchvision>=0.22.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cu128" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cu128" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
{% endif %}
[tool.bandit]
targets = ["src"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["__main__.py"]

[tool.mypy]
pretty = true
python_version = "3.13"
check_untyped_defs = true
ignore_missing_imports = true
strict = false
disable_error_code = ["import-untyped"]
# See https://mypy.readthedocs.io/en/stable/config_file.html#untyped-definitions-and-calls
disallow_untyped_decorators = false

[tool.pytest.ini_options]
addopts = "--verbosity=2"
pythonpath = ["src"]

[tool.ruff]
fix = true
indent-width = 4
line-length = 100
target-version = "py313"
src = ["src"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["D100", "D103"]

# SYSTEMS

# TODO: is this only for the package management?
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
